# modules/liferay-travel-rest/liferay-travel-rest-impl/src/main/java/com/liferay/travel/rest/internal/graphql/mutation/v1_0/Mutation.java
@@ -101,6 +101,17 @@ public class Mutation {
 		return true;
 	}
 
+	@GraphQLField
+	public Trip updateTrip(
+			@GraphQLName("tripId") Long tripId, @GraphQLName("trip") Trip trip)
+		throws Exception {
+
+		return _applyComponentServiceObjects(
+			_tripResourceComponentServiceObjects,
+			this::_populateResourceContext,
+			tripResource -> tripResource.putTrip(tripId, trip));
+	}
+
 	private <T, R, E1 extends Throwable, E2 extends Throwable> R
 			_applyComponentServiceObjects(
 				ComponentServiceObjects<T> componentServiceObjects,
